// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExceptionListHeader should render edit modal 1`] = `
<div>
  <div>
    <header
      class="euiPageHeader emotion-euiPageHeader-border"
      data-test-subj="PageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <nav
          aria-label="Breadcrumbs"
          class="euiBreadcrumbs"
        >
          <ol
            class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
          >
            <li
              class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
              data-test-subj="euiBreadcrumb"
            >
              <a
                aria-current="false"
                class="euiLink euiBreadcrumb__content emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncatedLast-isInteractive"
                href=""
                rel="noreferrer"
                title="Shared Exception Lists"
              >
                <div
                  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                  data-test-subj="Breadcrumb"
                >
                  <span
                    data-euiicon-type="arrowLeft"
                  />
                  Shared Exception Lists
                </div>
              </a>
            </li>
          </ol>
        </nav>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              <span
                class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
              >
                <span
                  class="euiFlexItem emotion-euiFlexItem-grow-10"
                >
                  <span
                    data-test-subj="TitleText"
                  >
                    List Name
                  </span>
                </span>
                <span
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Edit Text List Header"
                    class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                    data-test-subj="TitleEditIcon"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="pencil"
                    />
                  </button>
                </span>
              </span>
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <span
                  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-column"
                >
                  <span
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
                  >
                    <span
                      class="euiFlexItem emotion-euiFlexItem-grow-10"
                    >
                      <span
                        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                        data-test-subj="DescriptionText"
                      >
                        List description
                      </span>
                    </span>
                    <span
                      class="euiFlexItem emotion-euiFlexItem-growZero"
                    >
                      <button
                        aria-label="Edit Text List Header"
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        data-test-subj="DescriptionEditIcon"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="pencil"
                        />
                      </button>
                    </span>
                  </span>
                  <span
                    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                    data-test-subj="ListID"
                  >
                    <span
                      class="euiText emotion-EuiText"
                    >
                      List ID
                      :
                    </span>
                    <span
                      class="euiText emotion-EuiText"
                    >
                      List_Id
                    </span>
                  </span>
                </span>
              </p>
            </div>
          </div>
          <div
            class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
                data-test-subj="RightSideMenuItemsContainer"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <span
                    class="emotion-EuiTextColor"
                    data-test-subj="noLinkedRules"
                  >
                    Linked to 0 rules
                  </span>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <button
                    class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
                    data-test-subj="RightSideMenuItemsLinkRulesButton"
                    type="button"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate"
                      >
                        Link rules
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <div
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
                  >
                    <div
                      class="euiPopover emotion-euiPopover-inline-block"
                      data-test-subj="RightSideMenuItemsMenuActionsItems"
                    >
                      <button
                        aria-label="Header menu Button Icon"
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        data-test-subj="RightSideMenuItemsMenuActionsButtonIcon"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="boxesHorizontal"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
</div>
`;

exports[`ExceptionListHeader should render the List Header with name, default description and  actions 1`] = `
<div>
  <div>
    <header
      class="euiPageHeader emotion-euiPageHeader-border"
      data-test-subj="PageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <nav
          aria-label="Breadcrumbs"
          class="euiBreadcrumbs"
        >
          <ol
            class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
          >
            <li
              class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
              data-test-subj="euiBreadcrumb"
            >
              <a
                aria-current="false"
                class="euiLink euiBreadcrumb__content emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncatedLast-isInteractive"
                href=""
                rel="noreferrer"
                title="Shared Exception Lists"
              >
                <div
                  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                  data-test-subj="Breadcrumb"
                >
                  <span
                    data-euiicon-type="arrowLeft"
                  />
                  Shared Exception Lists
                </div>
              </a>
            </li>
          </ol>
        </nav>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              <span
                class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
              >
                <span
                  class="euiFlexItem emotion-euiFlexItem-grow-10"
                >
                  <span
                    data-test-subj="TitleText"
                  >
                    List Name
                  </span>
                </span>
                <span
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Edit Text List Header"
                    class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                    data-test-subj="TitleEditIcon"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="pencil"
                    />
                  </button>
                </span>
              </span>
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <span
                  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-column"
                >
                  <span
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
                  >
                    <span
                      class="euiFlexItem emotion-euiFlexItem-grow-10"
                    >
                      <span
                        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                        data-test-subj="DescriptionText"
                      >
                        Add a description
                      </span>
                    </span>
                    <span
                      class="euiFlexItem emotion-euiFlexItem-growZero"
                    >
                      <button
                        aria-label="Edit Text List Header"
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        data-test-subj="DescriptionEditIcon"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="pencil"
                        />
                      </button>
                    </span>
                  </span>
                  <span
                    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                    data-test-subj="ListID"
                  >
                    <span
                      class="euiText emotion-EuiText"
                    >
                      List ID
                      :
                    </span>
                    <span
                      class="euiText emotion-EuiText"
                    >
                      List_Id
                    </span>
                  </span>
                </span>
              </p>
            </div>
          </div>
          <div
            class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
                data-test-subj="RightSideMenuItemsContainer"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <span
                    class="emotion-EuiTextColor"
                    data-test-subj="noLinkedRules"
                  >
                    Linked to 0 rules
                  </span>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <button
                    class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
                    data-test-subj="RightSideMenuItemsLinkRulesButton"
                    type="button"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate"
                      >
                        Link rules
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <div
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
                  >
                    <div
                      class="euiPopover emotion-euiPopover-inline-block"
                      data-test-subj="RightSideMenuItemsMenuActionsItems"
                    >
                      <button
                        aria-label="Header menu Button Icon"
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        data-test-subj="RightSideMenuItemsMenuActionsButtonIcon"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="boxesHorizontal"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
</div>
`;

exports[`ExceptionListHeader should render the List Header with name, default description and disabled actions because of the ReadOnly mode 1`] = `
<div>
  <div>
    <header
      class="euiPageHeader emotion-euiPageHeader-border"
      data-test-subj="PageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <nav
          aria-label="Breadcrumbs"
          class="euiBreadcrumbs"
        >
          <ol
            class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
          >
            <li
              class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
              data-test-subj="euiBreadcrumb"
            >
              <a
                aria-current="false"
                class="euiLink euiBreadcrumb__content emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncatedLast-isInteractive"
                href=""
                rel="noreferrer"
                title="Shared Exception Lists"
              >
                <div
                  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                  data-test-subj="Breadcrumb"
                >
                  <span
                    data-euiicon-type="arrowLeft"
                  />
                  Shared Exception Lists
                </div>
              </a>
            </li>
          </ol>
        </nav>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              <span
                class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
              >
                <span
                  class="euiFlexItem emotion-euiFlexItem-grow-10"
                >
                  <span
                    data-test-subj="TitleText"
                  >
                    List Name
                  </span>
                </span>
                <span
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                />
              </span>
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <span
                  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-column"
                >
                  <span
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
                  >
                    <span
                      class="euiFlexItem emotion-euiFlexItem-grow-10"
                    >
                      <span
                        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                        data-test-subj="DescriptionText"
                      >
                        Add a description
                      </span>
                    </span>
                    <span
                      class="euiFlexItem emotion-euiFlexItem-growZero"
                    />
                  </span>
                  <span
                    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                    data-test-subj="ListID"
                  >
                    <span
                      class="euiText emotion-EuiText"
                    >
                      List ID
                      :
                    </span>
                    <span
                      class="euiText emotion-EuiText"
                    >
                      List_Id
                    </span>
                  </span>
                </span>
              </p>
            </div>
          </div>
          <div
            class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
                data-test-subj="RightSideMenuItemsContainer"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <span
                    class="emotion-EuiTextColor"
                    data-test-subj="noLinkedRules"
                  >
                    Linked to 0 rules
                  </span>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <button
                    class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
                    data-test-subj="RightSideMenuItemsLinkRulesButton"
                    type="button"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate"
                      >
                        Link rules
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <div
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
                  >
                    <div
                      class="euiPopover emotion-euiPopover-inline-block"
                      data-test-subj="RightSideMenuItemsMenuActionsItems"
                    >
                      <button
                        aria-label="Header menu Button Icon"
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
                        data-test-subj="RightSideMenuItemsMenuActionsButtonIcon"
                        disabled=""
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="boxesHorizontal"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
</div>
`;

exports[`ExceptionListHeader should render the List Header with name, default description and disabled actions because user can not edit details 1`] = `
<div>
  <div>
    <header
      class="euiPageHeader emotion-euiPageHeader-border"
      data-test-subj="PageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <nav
          aria-label="Breadcrumbs"
          class="euiBreadcrumbs"
        >
          <ol
            class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
          >
            <li
              class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
              data-test-subj="euiBreadcrumb"
            >
              <a
                aria-current="false"
                class="euiLink euiBreadcrumb__content emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncatedLast-isInteractive"
                href=""
                rel="noreferrer"
                title="Shared Exception Lists"
              >
                <div
                  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                  data-test-subj="Breadcrumb"
                >
                  <span
                    data-euiicon-type="arrowLeft"
                  />
                  Shared Exception Lists
                </div>
              </a>
            </li>
          </ol>
        </nav>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              <span
                class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
              >
                <span
                  class="euiFlexItem emotion-euiFlexItem-grow-10"
                >
                  <span
                    data-test-subj="TitleText"
                  >
                    List Name
                  </span>
                </span>
                <span
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                />
              </span>
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <span
                  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-column"
                >
                  <span
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
                  >
                    <span
                      class="euiFlexItem emotion-euiFlexItem-grow-10"
                    >
                      <span
                        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                        data-test-subj="DescriptionText"
                      >
                        Add a description
                      </span>
                    </span>
                    <span
                      class="euiFlexItem emotion-euiFlexItem-growZero"
                    />
                  </span>
                  <span
                    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
                    data-test-subj="ListID"
                  >
                    <span
                      class="euiText emotion-EuiText"
                    >
                      List ID
                      :
                    </span>
                    <span
                      class="euiText emotion-EuiText"
                    >
                      List_Id
                    </span>
                  </span>
                </span>
              </p>
            </div>
          </div>
          <div
            class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
                data-test-subj="RightSideMenuItemsContainer"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <span
                    class="emotion-EuiTextColor"
                    data-test-subj="noLinkedRules"
                  >
                    Linked to 0 rules
                  </span>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <div
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
                  >
                    <div
                      class="euiPopover emotion-euiPopover-inline-block"
                      data-test-subj="RightSideMenuItemsMenuActionsItems"
                    >
                      <button
                        aria-label="Header menu Button Icon"
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        data-test-subj="RightSideMenuItemsMenuActionsButtonIcon"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="boxesHorizontal"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
</div>
`;
